# elpis-ide

./: .gitignore  ElpisRuntime  app.js  package-lock.json  package.json
EogenVirtualMachine/: CMakeLists.txt  EogenVirtualMachine  EogenVirtualMachine.cbp  Makefile  valgrind-out.txt
EogenVirtualMachine/public/: EogenVirtualMachine
EogenVirtualMachine/web/api/Cipher/: Sha256.c  Sha256.h
EogenVirtualMachine/web/api/IO/: ConsolePrinter.c  ConsolePrinter.h  HttpServer.c  HttpServer.h
EogenVirtualMachine/web/api/String/: String.c  String.h
EogenVirtualMachine/web/driver/: main.c
EogenVirtualMachine/web/models/: Models.h
EogenVirtualMachine/web/runner/: Kasper.c  Kasper.h  Rider.c  Rider.h
EogenVirtualMachine/web/structures/array/: array.c  array.h
EogenVirtualMachine/web/structures/dictionary/: Dictionary.c  Dictionary.h
EogenVirtualMachine/web/structures/list/: List.c  List.h
EogenVirtualMachine/web/structures/stack/: Stack.c  Stack.h
EogenVirtualMachine/web/utils/: GarbageCenter.c  GarbageCenter.h  json.c  json.h
client-app/: package-lock.json  package.json
client-app/src/: App.js
client-app/src/components/CodeEditor/: index.js
client-app/src/components/CompView/: index.js
client-app/src/components/FileView/: index.js
client-app/src/components/MainAppBar/: index.js
client-app/src/components/MainDrawer/: index.js
client-app/src/components/ObjectStore/: index.js
client-app/src/components/ResMonitor/: index.js
client-app/src/components/Terminal/: index.js
client-app/src/memory/: index.js
client-app/src/tools/: Configurators.js
elpis-client/: package-lock.json  package.json
elpis-client/public/: index.html
elpis-client/src/: App.js  CollapsibleAppBar.js  HideAppBar.js  Renderer.js  config.json
